--- a/mern-ecommerce-food-site-client/.gitignore
+++ b/mern-ecommerce-food-site-client/.gitignore
@@ -1,12 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/mern-ecommerce-food-site-client/node_modules
-/mern-ecommerce-food-site-server/node_modules
+/node_modules
+/.pnp
+.pnp.js
 
+# testing
+/coverage
+
+# production
+/build
 
 # misc
-.env
 .DS_Store
 .env.local
 .env.development.local
