--- a/mern-ecommerce-food-site-client/package.json
+++ b/mern-ecommerce-food-site-client/package.json
@@ -43,5 +43,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8800/api"
+  "proxy": "http://localhost:8800/api",
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
+  }
 }
