Build added inside server folder and server node server now also hosts the react app

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /mern-ecommerce-food-site-client/node_modules
 /mern-ecommerce-food-site-server/node_modules
+/mern-ecommerce-food-site-client/build
 
 
 # misc
